[metadata]
name = gasmoney-hasar
version = 0.0.1
author = Hasar Ali
author_email = Hasar.Ali@protonmail.com
description = Connects passengers and drivers on long rides
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HasarAli/GasMoney
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0-or-later
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires = 
    build==0.7.0
    check-manifest==0.47
    click==8.0.1
    dnspython==2.1.0
    email-validator==1.1.3
    Flask==2.0.1
    Flask-Login==0.5.0
    Flask-SQLAlchemy==2.5.1
    Flask-WTF==0.15.1
    greenlet==1.1.2
    idna==3.2
    itsdangerous==2.0.1
    Jinja2==3.0.1
    MarkupSafe==2.0.1
    packaging==21.3
    pep517==0.12.0
    phonenumbers==8.12.33
    pyparsing==3.0.6
    python-dotenv==0.19.0
    SQLAlchemy==1.4.25
    toml==0.10.2
    tomli==2.0.0
    Werkzeug==2.0.1
    WTForms==2.3.3

[options.packages.find]
where = gasmoney