[metadata]
name = gasmoney-hasar
version = 0.0.1
author = Hasar Ali
author_email = Hasar.Ali@protonmail.com
description = Connects passengers and drivers on long rides
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
url = https://github.com/HasarAli/GasMoney
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0-or-later
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires = 
    check-manifest>=0.47
    email-validator>=1.1.3
    flask>=2.0.1
    flask-login>=0.5.0
    flask-sqlalchemy>=2.5.1
    flask-wtf>=0.15.1
    gunicorn>=20.1.0
    phonenumbers>=8.12.33


[options.packages.find]
where = gasmoney